// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomizedAxisTick ACT theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7bksuk-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ACT_ET theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-17ncq6q-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ENCOURA theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1lgbm2b-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1lgbm2b-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-198k5o1-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;
